src/objects/MMFEES__c.object
<CustomObject>
    <description>(MBI) - MMD - Plan Sponsor - Pension Plan Provider Fees</description>
    <fields>
        <fullName>COLLECTIVE__c</fullName>
        <label>Collective Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Collective_Desc__c</fullName>
        <formula>CASE( COLLECTIVE__c,
&quot;000&quot;,&quot;Unspecified&quot;,
&quot;001&quot;,&quot;Common Collective Trust&quot;,
&quot;002&quot;,&quot;Exchange-Traded Fund&quot;,
&quot;004&quot;,&quot;Mutual Fund&quot;,
&quot;005&quot;,&quot;Pooled Separate Account&quot;,
&quot;007&quot;,&quot;Unit Trust&quot;,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Collective</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FEE_AGEN_AMOUNT__c</fullName>
        <label>Fee AUM</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FEE_AMOUNT__c</fullName>
        <label>Fee Amount ($000)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FEE_CUR__c</fullName>
        <label>Local Currency</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FEE_DATE__c</fullName>
        <label>Fee Paid</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FEE_NOTES__c</fullName>
        <label>Notes</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Firm_Name_del__c</fullName>
        <formula>$Organization.Country</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Firm Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID__c</fullName>
        <label>MMD ID</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MMD_Firm_Profile__c</fullName>
        <label>MMD Firm Profile</label>
        <referenceTo>MMCOMP__c</referenceTo>
        <relationshipLabel>MMD Provider Fees</relationshipLabel>
        <relationshipName>MMD_Provider_Fees</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>PLAN_NAME__c</fullName>
        <label>Plan Name</label>
        <length>130</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PLAN_SEQ__c</fullName>
        <label>Plan Sequence #</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PROV_ID__c</fullName>
        <label>Provider ID</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PROV_NAME__c</fullName>
        <label>Provider Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_Link__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Provider Link</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>MMD Provider Fees</relationshipLabel>
        <relationshipName>MMD_Provider_Fees_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>REGION__c</fullName>
        <label>Region Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region_Desc__c</fullName>
        <label>Region</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SERVICE_CODE__c</fullName>
        <label>Service Code</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STYLE__c</fullName>
        <label>Style Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVC_DETAIL__c</fullName>
        <label>Service Details</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service__c</fullName>
        <formula>IF( SERVICE_CODE__c =&quot;ACCTG&quot;,&quot;Accounting&quot;,
IF( SERVICE_CODE__c =&quot;ACT&quot;,&quot;Actuary&quot;,
IF( SERVICE_CODE__c =&quot;AUD&quot;,&quot;Auditor&quot;,
IF( SERVICE_CODE__c =&quot;CONC&quot;,&quot;Concierge Services&quot;,
IF( SERVICE_CODE__c =&quot;CUST&quot;,&quot;Custodian&quot;,
IF( SERVICE_CODE__c =&quot;ELECSVCS&quot;,&quot;Election Services GCUS Global Custodian&quot;,
IF( SERVICE_CODE__c =&quot;CON&quot;,&quot;Investment Consultant&quot;,
IF( SERVICE_CODE__c =&quot;MGR&quot;,&quot;Investment Manager&quot;,
IF( SERVICE_CODE__c =&quot;ITSVCS&quot;,&quot;IT/Data Processing/Computer Services&quot;,
IF( SERVICE_CODE__c =&quot;LEGAL&quot;,&quot;Legal&quot;,
IF( SERVICE_CODE__c =&quot;LOBSVCS&quot;,&quot;Lobbyist Services&quot;,
IF( SERVICE_CODE__c =&quot;OTHBNK&quot;,&quot;Other Banking Relationship&quot;,
IF( SERVICE_CODE__c =&quot;OTHCON&quot;,&quot;Other Consultant&quot;,
IF( SERVICE_CODE__c =&quot;OTHPRO&quot;,&quot;Other Professional Services&quot;,
IF( SERVICE_CODE__c =&quot;PERFCON&quot;,&quot;Performance Measurement Consultants&quot;,
IF( SERVICE_CODE__c =&quot;RECON&quot;,&quot;Real Estate Consultant&quot;,
IF( SERVICE_CODE__c =&quot;RKP&quot;,&quot;Recordkeeper&quot;,
IF( SERVICE_CODE__c =&quot;TAXSVCS&quot;,&quot;Tax Services&quot;,
IF( SERVICE_CODE__c =&quot;TPA&quot;,&quot;Third Party Administrator&quot;,
IF( SERVICE_CODE__c =&quot;TRUS&quot;,&quot;Trustee&quot;,
IF( SERVICE_CODE__c =&quot;MTR&quot;,&quot;Master Trustee&quot;,
&quot; &quot;)))))))))))))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Style_Desc__c</fullName>
        <label>Style</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TYPE__c</fullName>
        <label>Type Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_Desc__c</fullName>
        <formula>CASE( TYPE__c,
&quot;001&quot;,&quot;Alternatives&quot;,
&quot;002&quot;,&quot;Asset Allocation&quot;,
&quot;004&quot;,&quot;Cash &amp; Short-Term&quot;,
&quot;005&quot;,&quot;Equities&quot;,
&quot;006&quot;,&quot;Fixed Income&quot;,
&quot;008&quot;,&quot;Loans&quot;,
&quot;009&quot;,&quot;Self Directed Brokerage Accounts&quot;,
&quot;014&quot;,&quot;Real Estate&quot;,
&quot;000&quot;,&quot;Unspecified&quot;,TYPE__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Type</label>
        <type>Text</type>
    </fields>
    <label>MMD Provider Fee</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Link</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MMD Provider Fees</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>